--- a/templates/head.layout.tmpl
+++ b/templates/head.layout.tmpl
@@ -1,8 +1,12 @@
 {{define "head"}}
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="./static/images/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./static/images/favicon-32x32.png">
@@ -13,7 +17,6 @@
 		<meta name="theme-color" content="#ffffff">
 
 
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<title>{{block "title" .}} {{end}}</title>
 		{{block "css" .}} {{end}}
 	</head>
