split html to go tmpl

--- a/templates/body.layout.tmpl
+++ b/templates/body.layout.tmpl
@@ -1,8 +1,9 @@
 {{define "body"}}
 	<body>
+		{{template "header" .}}
 		{{block "content" .}}
 
 		{{end}}
-		{{template "footer"}}
+		{{template "footer" .}}
 	</body>
 {{end}}
