--- a/templates/contact.page.tmpl
+++ b/templates/contact.page.tmpl
@@ -1,17 +1,86 @@
 {{template "base" .}}
 
+{{define "title"}}
+B8B Contact Us
+{{end}}
+
 {{define "content"}}
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="page-header">
-                <h1>{{index .StringMap "title"}}</h1>
+<main class="flex-fill">
+    <div class="container top-space">
+        <!--Section: Contact v.2-->
+        <section class="mb-4">
+            <!--Section heading-->
+            <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+            <!--Section description-->
+            <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to
+                contact us
+                directly. Our team will come back to you within
+                a matter of hours to help you.</p>
+
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-md">
+                    <form id="contact-form" name="contact-form" action="" method="POST">
+
+                        <!--Grid row-->
+                        <div class="row p-2">
+                            <!--Grid column-->
+                            <div class="col-md">
+                                <div class="form-floating">
+                                    <input type="text" id="name" name="name" class="form-control"
+                                        placeholder="your name">
+                                    <label for="name">Name</label>
+                                </div>
+                            </div>
+
+                            <!--Grid column-->
+                            <div class="col-md">
+                                <div class="form-md">
+                                    <input type="email" id="email" name="email" class="form-control"
+                                        placeholder="name@example.com">
+                                    <label for="email">Email</label>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!--Grid row-->
+                        <div class="row p-2">
+                            <div class="col-md">
+                                <div class="form-floating">
+                                    <input type="text" id="subject" name="subject" class="form-control"
+                                        placeholder="Contact Subject">
+                                    <label for="subject">Subject</label>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Grid row-->
+
+                        <!--Grid row-->
+                        <div class="row p-2">
+                            <!--Grid column-->
+                            <div class="col-md">
+                                <div class="form-floating">
+                                    <textarea type="text" id="message" name="message" rows="2"
+                                        class="form-control md-textarea"></textarea>
+                                    <label for="message">Your message</label>
+                                </div>
+
+                            </div>
+                        </div>
+                        <!--Grid row-->
+                    </form>
+
+                    <div class="text-center text-md-left">
+                        <a class="btn btn-primary" onclick="">Send</a>
+                    </div>
+                    <div class="status"></div>
+                </div>
+                <!--Grid column-->
             </div>
-            <p class="lead">
-                {{index .StringMap "body"}}
-            </p>
-            <p>&copy; {{index .StringMap "author"}}</p>
-        </div>
+        </section>
+        <!--Section: Contact v.2-->
     </div>
-</div>
+</main>
+
 {{end}}
