--- a/templates/footer.layout.tmpl
+++ b/templates/footer.layout.tmpl
@@ -1,10 +1,35 @@
 {{define "footer"}}
-	<footer>
-		<!-- Option 1: Bootstrap Bundle with Popper -->
-	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<footer class="footer py-3 bg-light mt-4">
+	<div class="container">
+		<div class="row">
+			<div class="col text-center">
+				Left
+			</div>
+			<div class="col text-center">
+				Centre
+			</div>
+			<div class="col text-center">
+				Right
+			</div>
+		</div>
+	</div>
 
-		{{block "js" .}}
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+		</script>
 
-		{{end}}
-	</footer>
+	<!-- Date Picker -->
+	<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker-full.min.js"
+		crossorigin="anonymous"></script>
+
+	<!-- Notie Notification -->
+	<script src="https://unpkg.com/notie" crossorigin="anonymous"></script>
+
+	<!-- Sweet Alert -->
+	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+	<!-- Custom Page Scripts -->
+	{{block "js" .}} {{end}}
+</footer>
 {{end}}
