--- a/templates/head.layout.tmpl
+++ b/templates/head.layout.tmpl
@@ -1,23 +1,38 @@
 {{define "head"}}
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<!-- Favicon -->
-		<link rel="apple-touch-icon" sizes="180x180" href="./static/images/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="./static/images/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="./static/images/favicon-16x16.png">
-		<link rel="manifest" href="./static/images/site.webmanifest">
-		<link rel="mask-icon" href="./static/images/safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#ffffff">
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
+	<!-- Date Picker -->
+	<link rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker-bs5.min.css"
+		crossorigin="anonymous">
 
-		<title>{{block "title" .}} {{end}}</title>
-		{{block "css" .}} {{end}}
-	</head>
+	<!-- Notie Notification -->
+	<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+
+	<!-- Custom Styles	 -->
+	<link rel="stylesheet" href="./static/style/custom.css">
+
+	<!-- Favicon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="./static/images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./static/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./static/images/favicon-16x16.png">
+	<link rel="manifest" href="./static/images/site.webmanifest">
+	<link rel="mask-icon" href="./static/images/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Title -->
+	<title>{{block "title" .}} {{end}}</title>
+
+	<!-- Custom Page Style -->
+	{{block "css" .}} {{end}}
+</head>
 {{ end }}
