--- a/templates/footer.layout.tmpl
+++ b/templates/footer.layout.tmpl
@@ -24,7 +24,7 @@
 		crossorigin="anonymous"></script>
 
 	<!-- Notie Notification -->
-	<script src="https://unpkg.com/notie" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/notie@4.3.1/dist/notie.min.js" crossorigin="anonymous"></script>
 
 	<!-- Sweet Alert -->
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.6/dist/sweetalert2.min.js"
