--- a/templates/head.layout.tmpl
+++ b/templates/head.layout.tmpl
@@ -15,7 +15,7 @@
 		crossorigin="anonymous">
 
 	<!-- Notie Notification -->
-	<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+	<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie@4.3.1/dist/notie.min.css">
 
 	<!-- Sweet Alert -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.6/dist/sweetalert2.min.css"
