breaking booking page

--- a/templates/armani.page.tmpl
+++ b/templates/armani.page.tmpl
@@ -119,7 +119,7 @@ B8B Room Armani
 <script>
     // Pop up form
     document.getElementById('check-now').addEventListener('click', function (e) {
-        let html = `<form id="search-availability" action="book.html" method="get" class="row needs-validation" novalidate>
+        let html = `<form id="search-availability" action="" method="post" class="row needs-validation" novalidate>
                         <div class="row text-center">
                             <div class="col">
                                 <div id="reservation-dates">
